--- a/MyCity4Kids/MyCity4Kids/res/layout/groups_image_poll_post_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/groups_image_poll_post_item.xml
@@ -42,6 +42,27 @@
         android:textSize="12sp"
         app:fontName="oswald_regular.ttf" />
 
+
+    <com.mycity4kids.widget.CustomFontTextView
+        android:id="@+id/userTag"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="2dp"
+        android:layout_marginLeft="2dp"
+        android:layout_marginTop="5dp"
+        android:layout_toRightOf="@+id/usernameTextView"
+        android:background="@drawable/user_tag_round_layout"
+        android:ellipsize="end"
+        android:fontFamily="sans-serif"
+        android:gravity="center"
+        android:paddingLeft="10dp"
+        android:paddingTop="2dp"
+        android:paddingRight="10dp"
+        android:paddingBottom="3dp"
+        android:text="test"
+        android:textColor="#80828f"
+        android:textSize="10sp" />
+
     <com.mycity4kids.widget.CustomFontTextView
         android:id="@+id/postDateTextView"
         android:layout_width="wrap_content"
