--- a/MyCity4Kids/MyCity4Kids/res/layout/group_post_detail_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/group_post_detail_activity.xml
@@ -192,7 +192,7 @@
         android:elevation="6dp"
         android:visibility="gone" />
 
-    <android.support.v7.widget.CardView
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -203,7 +203,7 @@
             android:id="@+id/commentLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
+            android:layout_centerVertical="true"
             android:layout_marginLeft="12dp"
             android:layout_marginRight="12dp"
             android:layout_marginBottom="@dimen/space_20"
@@ -257,6 +257,6 @@
 
 
         </RelativeLayout>
-    </android.support.v7.widget.CardView>
+    </RelativeLayout>
 
 </RelativeLayout>
