--- a/MyCity4Kids/MyCity4Kids/res/layout/groups_text_poll_post_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/groups_text_poll_post_item.xml
@@ -5,17 +5,17 @@
     android:layout_height="wrap_content"
     android:layout_marginBottom="16dp"
     android:background="@color/white_color"
-    android:paddingBottom="4dp"
     android:paddingLeft="10dp"
+    android:paddingTop="8dp"
     android:paddingRight="10dp"
-    android:paddingTop="8dp">
+    android:paddingBottom="4dp">
 
     <com.mikhaellopez.circularimageview.CircularImageView
         android:id="@+id/userImageView"
         android:layout_width="@dimen/ad_comments_profile_pic_width"
         android:layout_height="@dimen/ad_comments_profile_pic_width"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:contentDescription="@string/author_img"
         android:src="@drawable/default_commentor_img"
@@ -28,8 +28,8 @@
         android:id="@+id/usernameTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="3dp"
         android:layout_marginStart="3dp"
+        android:layout_marginLeft="3dp"
         android:layout_marginTop="4dp"
         android:layout_toEndOf="@+id/userImageView"
         android:layout_toRightOf="@+id/userImageView"
@@ -41,14 +41,33 @@
         android:textColor="@color/ad.comment.username"
         android:textSize="14sp"
         app:fontName="oswald_regular.ttf" />
+    <com.mycity4kids.widget.CustomFontTextView
+        android:id="@+id/userTag"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="2dp"
+        android:layout_marginLeft="2dp"
+        android:layout_marginTop="5dp"
+        android:layout_toRightOf="@+id/usernameTextView"
+        android:background="@drawable/user_tag_round_layout"
+        android:ellipsize="end"
+        android:fontFamily="sans-serif"
+        android:gravity="center"
+        android:paddingLeft="10dp"
+        android:paddingBottom="3dp"
+        android:paddingTop="2dp"
+        android:paddingRight="10dp"
+        android:text="test"
+        android:textColor="#80828f"
+        android:textSize="10sp" />
 
     <com.mycity4kids.widget.CustomFontTextView
         android:id="@+id/postDateTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/usernameTextView"
-        android:layout_alignStart="@+id/usernameTextView"
         android:layout_below="@id/usernameTextView"
+        android:layout_alignStart="@+id/usernameTextView"
+        android:layout_alignLeft="@+id/usernameTextView"
         android:layout_marginTop="2dp"
         android:ellipsize="end"
         android:paddingLeft="5dp"
@@ -62,8 +81,8 @@
         android:id="@+id/postSettingImageView"
         android:layout_width="wrap_content"
         android:layout_height="20dp"
-        android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:clickable="true"
         android:paddingLeft="15dp"
@@ -76,9 +95,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/userImageView"
+        android:layout_marginTop="15dp"
         android:layout_marginEnd="2dp"
         android:layout_marginRight="2dp"
-        android:layout_marginTop="15dp"
         android:gravity="start"
         android:text=""
         android:textColor="@color/groups.grey"
@@ -103,8 +122,8 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_below="@+id/pollResult1TextView"
-        android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
         android:layout_toLeftOf="@+id/pollOption1ProgressTextView"
         android:background="@drawable/polls_border_bg"
         app:rcBackgroundColor="@color/white"
@@ -119,8 +138,8 @@
         android:id="@+id/pollOption1TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/pollOption1ProgressBar"
         android:layout_alignTop="@+id/pollOption1ProgressBar"
+        android:layout_alignBottom="@+id/pollOption1ProgressBar"
         android:layout_marginLeft="5dp"
         android:background="@color/transparent"
         android:clickable="false"
@@ -133,8 +152,8 @@
         android:id="@+id/pollOption1ProgressTextView"
         android:layout_width="40dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
         android:layout_below="@+id/pollResult1TextView"
+        android:layout_alignParentRight="true"
         android:layout_marginTop="20dp"
         android:background="@color/white"
         android:text=""
@@ -157,8 +176,8 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_below="@+id/pollResult2TextView"
-        android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
         android:layout_toLeftOf="@+id/pollOption2ProgressTextView"
         android:background="@drawable/polls_border_bg"
         app:rcBackgroundColor="@color/white"
@@ -173,8 +192,8 @@
         android:id="@+id/pollOption2TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/pollOption2ProgressBar"
         android:layout_alignTop="@+id/pollOption2ProgressBar"
+        android:layout_alignBottom="@+id/pollOption2ProgressBar"
         android:layout_marginLeft="5dp"
         android:background="@color/transparent"
         android:clickable="false"
@@ -187,8 +206,8 @@
         android:id="@+id/pollOption2ProgressTextView"
         android:layout_width="40dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
         android:layout_below="@+id/pollResult2TextView"
+        android:layout_alignParentRight="true"
         android:layout_marginTop="20dp"
         android:background="@color/white"
         android:text=""
@@ -217,8 +236,8 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_below="@+id/pollResult3TextView"
-            android:layout_marginRight="10dp"
             android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
             android:layout_toLeftOf="@+id/pollOption3ProgressTextView"
             android:background="@drawable/polls_border_bg"
             app:rcBackgroundColor="@color/white"
@@ -233,8 +252,8 @@
             android:id="@+id/pollOption3TextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/pollOption3ProgressBar"
             android:layout_alignTop="@+id/pollOption3ProgressBar"
+            android:layout_alignBottom="@+id/pollOption3ProgressBar"
             android:layout_marginLeft="5dp"
             android:background="@color/transparent"
             android:clickable="false"
@@ -247,8 +266,8 @@
             android:id="@+id/pollOption3ProgressTextView"
             android:layout_width="40dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
             android:layout_below="@+id/pollResult3TextView"
+            android:layout_alignParentRight="true"
             android:layout_marginTop="20dp"
             android:background="@color/white"
             android:text=""
@@ -278,8 +297,8 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_below="@+id/pollResult4TextView"
-            android:layout_marginRight="10dp"
             android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
             android:layout_toLeftOf="@+id/pollOption4ProgressTextView"
             android:background="@drawable/polls_border_bg"
             app:rcBackgroundColor="@color/white"
@@ -294,8 +313,8 @@
             android:id="@+id/pollOption4TextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/pollOption4ProgressBar"
             android:layout_alignTop="@+id/pollOption4ProgressBar"
+            android:layout_alignBottom="@+id/pollOption4ProgressBar"
             android:layout_marginLeft="5dp"
             android:background="@color/transparent"
             android:clickable="false"
@@ -308,8 +327,8 @@
             android:id="@+id/pollOption4ProgressTextView"
             android:layout_width="40dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
             android:layout_below="@+id/pollResult4TextView"
+            android:layout_alignParentRight="true"
             android:layout_marginTop="20dp"
             android:background="@color/white"
             android:text="40%"
@@ -390,8 +409,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/totalVoteCountTextView"
-        android:layout_marginRight="5dp"
         android:layout_marginTop="10dp"
+        android:layout_marginRight="5dp"
         android:layout_toLeftOf="@+id/addCommentImageView"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:clickable="true"
@@ -407,8 +426,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/totalVoteCountTextView"
-        android:layout_marginRight="4dp"
         android:layout_marginTop="10dp"
+        android:layout_marginRight="4dp"
         android:layout_toLeftOf="@+id/shareTextView"
         android:padding="5dp"
         android:src="@drawable/ic_comments"
@@ -418,15 +437,15 @@
         android:id="@+id/shareTextView"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:layout_alignParentRight="true"
         android:layout_below="@+id/totalVoteCountTextView"
+        android:layout_alignParentRight="true"
         android:layout_marginTop="10dp"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:clickable="true"
-        android:paddingBottom="5dp"
         android:paddingLeft="5dp"
-        android:paddingRight="5dp"
         android:paddingTop="5dp"
+        android:paddingRight="5dp"
+        android:paddingBottom="5dp"
         android:src="@drawable/ic_share_white"
         android:tint="@color/app_red" />
 
@@ -437,8 +456,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/addCommentImageView"
         android:layout_marginTop="@dimen/space_10"
-        android:visibility="gone"
-        android:background="@drawable/group_post_comment_round_corner_layout">
+        android:background="@drawable/group_post_comment_round_corner_layout"
+        android:visibility="gone">
 
         <com.mycity4kids.widget.CustomFontTextView
             android:id="@+id/typeHere"
@@ -458,10 +477,10 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="@dimen/space_10"
             android:text="@string/group_comment_be_the_first_text"
-            app:fontName="oswald.ttf"
             android:textColor="@color/groups.grey"
             android:textSize="12sp"
-            android:visibility="gone" />
+            android:visibility="gone"
+            app:fontName="oswald.ttf" />
 
         <ImageView
             android:id="@+id/audio"
