--- a/MyCity4Kids/MyCity4Kids/res/layout/topics_articles_tab_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/topics_articles_tab_fragment.xml
@@ -204,6 +204,7 @@
             app:fab_addButtonColorPressed="@color/fab.white"
             app:fab_addButtonPlusIconColor="@color/white_color"
             app:fab_addButtonStrokeVisible="false"
+            android:visibility="gone"
             app:fab_labelStyle="@style/menu_labels_style"
             app:fab_labelsPosition="left">
 
