--- a/MyCity4Kids/MyCity4Kids/res/drawable/ic_mom_vlogs_unselected.xml
+++ b/MyCity4Kids/MyCity4Kids/res/drawable/ic_mom_vlogs_unselected.xml
@@ -4,11 +4,11 @@
     android:viewportWidth="24.0"
     android:viewportHeight="24.0">
     <path
-        android:fillColor="#00000000"
         android:pathData="M19.8,20.3H4.4c-1.1,0 -2,-0.9 -2,-2V6c0,-1.1 0.9,-2 2,-2h15.4c1.1,0 2,0.9 2,2v12.4C21.8,19.4 20.9,20.3 19.8,20.3z"
-        android:strokeWidth="1.296"
-        android:strokeColor="@color/app_red" />
+        android:strokeColor="#999BA9"
+        android:fillColor="#00000000"
+        android:strokeWidth="1.296"/>
     <path
-        android:fillColor="@color/app_red"
-        android:pathData="M9.1,16.2V8.1l8.1,4.1L9.1,16.2zM10.5,10.4v3.5l3.5,-1.7L10.5,10.4z" />
+        android:fillColor="#999BA9"
+        android:pathData="M9.1,16.2V8.1l8.1,4.1L9.1,16.2zM10.5,10.4v3.5l3.5,-1.7L10.5,10.4z"/>
 </vector>
