100 word story change for vicharsagar

--- a/MyCity4Kids/MyCity4Kids/res/menu/menu_bottom_navigation_bar.xml
+++ b/MyCity4Kids/MyCity4Kids/res/menu/menu_bottom_navigation_bar.xml
@@ -15,7 +15,7 @@
     <item
         android:id="@+id/action_momVlog"
         android:icon="@drawable/selector_mom_vlog"
-        android:title="@string/myprofile.section.videos_label" />
+        android:title="@string/myprofile.section.mom_bottom_label" />
     <item
         android:id="@+id/action_location"
         android:icon="@drawable/selector_events_tab"
