group comment and drawer lang bug fixed

--- a/MyCity4Kids/MyCity4Kids/res/layout/groups_text_post_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/groups_text_post_item.xml
@@ -179,7 +179,7 @@
         android:clickable="true"
         android:gravity="bottom"
         android:padding="5dp"
-        android:text="20 Comments"
+        android:text="Comments"
         android:textColor="@color/app_red"
         android:textSize="12sp"
         app:fontName="oswald.ttf" />
