--- a/MyCity4Kids/MyCity4Kids/res/layout/drawer_layout.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/drawer_layout.xml
@@ -185,6 +185,7 @@
             android:layout_below="@+id/divider2"
             android:layout_marginTop="16dp">
 
+
             <com.mycity4kids.widget.CustomFontTextView
                 android:id="@+id/selectedLangtext"
                 android:layout_width="match_parent"
@@ -209,8 +210,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
-
-                android:layout_marginRight="8dp"
+                android:layout_marginRight="33dp"
                 android:drawablePadding="10dp"
                 android:drawableTint="@color/app_red"
                 android:gravity="center"
@@ -219,20 +219,28 @@
                 android:textAllCaps="true"
                 android:textColor="@color/app_red"
                 android:textSize="14sp"
+                android:visibility="visible"
                 app:fontName="oswald.ttf" />
 
             <ImageView
-                android:layout_width="18dp"
-                android:layout_height="18dp"
+                android:id="@+id/langImageRightArrow"
+                android:layout_width="17dp"
+                android:layout_height="17dp"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
+                android:layout_marginRight="25dp"
                 android:paddingTop="1dp"
                 android:src="@drawable/arrow_right"
-                android:tint="@color/app_red" />
+                android:tint="@color/app_red"
+                android:visibility="visible" />
 
-
+            <View
+                android:id="@+id/langView"
+                android:layout_width="match_parent"
+                android:layout_height="60dp" />
 
         </RelativeLayout>
+
 
         <com.mycity4kids.widget.CustomFontTextView
             android:id="@+id/settingTextView"
