--- a/MyCity4Kids/MyCity4Kids/res/layout/groups_post_audio_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/groups_post_audio_item.xml
@@ -62,15 +62,15 @@
             android:layout_marginStart="2dp"
             android:layout_marginLeft="2dp"
             android:layout_marginTop="5dp"
-            android:layout_toRightOf="@+id/usernameTextView"
+            android:layout_toRightOf="@+id/commentorUsernameTextView"
             android:background="@drawable/user_tag_round_layout"
             android:ellipsize="end"
             android:fontFamily="sans-serif"
             android:gravity="center"
             android:paddingLeft="10dp"
-            android:paddingBottom="3dp"
             android:paddingTop="2dp"
             android:paddingRight="10dp"
+            android:paddingBottom="3dp"
             android:text="test"
             android:textColor="#80828f"
             android:textSize="10sp" />
