--- a/MyCity4Kids/MyCity4Kids/res/layout/challenge_rules_dialog.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/challenge_rules_dialog.xml
@@ -3,7 +3,7 @@
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="500dp"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -40,10 +40,10 @@
 
         android:id="@+id/videoChallengeRulesWebView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="@dimen/space_10"
         android:layout_marginTop="65dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginRight="@dimen/space_10"
         android:autoLink="web"
         android:background="@color/white_color"
         android:ellipsize="end"
