--- a/MyCity4Kids/MyCity4Kids/res/layout/drawer_layout.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/drawer_layout.xml
@@ -140,11 +140,53 @@
             android:textSize="14sp"
             app:fontName="oswald.ttf" />
 
+
+        <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/rewardsTextView"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_below="@+id/groupsTextView"
+            android:drawableLeft="@drawable/ic_rupee"
+            android:drawablePadding="20dp"
+            android:gravity="center_vertical"
+            android:paddingLeft="30dp"
+            android:paddingTop="12dp"
+            android:paddingRight="16dp"
+
+            android:paddingBottom="12dp"
+            android:text="@string/momspresso_rewards"
+            android:textSize="14sp"
+            app:fontName="oswald.ttf" />
+
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:layout_below="@+id/groupsTextView"
+            android:layout_alignParentRight="true">
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/newTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="25dp"
+                android:background="@drawable/new_drawer_bg"
+                android:layout_gravity="center_vertical"
+                android:paddingBottom="2dp"
+                android:paddingTop="2dp"
+                android:paddingLeft="@dimen/space_10"
+                android:paddingRight="@dimen/space_10"
+                android:text="@string/new_label"
+                android:textColor="@color/white"
+                android:textSize="12sp"
+                app:fontName="oswald.ttf" />
+        </LinearLayout>
+
         <View
             android:id="@+id/divider1"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_below="@+id/groupsTextView"
+            android:layout_below="@+id/rewardsTextView"
             android:layout_marginLeft="25dp"
             android:layout_marginTop="16dp"
             android:layout_marginRight="25dp"
