--- a/MyCity4Kids/MyCity4Kids/res/layout/grid_view_header.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/grid_view_header.xml
@@ -19,6 +19,38 @@
             android:orientation="horizontal">
 
             <RelativeLayout
+                android:id="@+id/rewardsContainer"
+                android:layout_width="90dp"
+                android:layout_height="100dp"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp"
+                android:background="@drawable/round_border_groups">
+
+                <ImageView
+                    android:id="@+id/rewardsImageView"
+                    android:layout_width="26dp"
+                    android:layout_height="26dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="24dp"
+                    android:alpha="0.6"
+                    android:src="@drawable/ic_rupee"
+                    android:tint="@color/white" />
+
+                <com.mycity4kids.widget.CustomFontTextView
+                    android:id="@+id/rewardsTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/rewardsImageView"
+                    android:layout_marginBottom="10dp"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:text="@string/rewards_program"
+                    android:textColor="@color/white"
+                    android:textSize="14sp"
+                    app:fontName="oswald_regular.ttf" />
+            </RelativeLayout>
+
+            <RelativeLayout
                 android:id="@+id/videosContainer"
                 android:layout_width="90dp"
                 android:layout_height="100dp"
